# readme_and_act

./: CHANGELOG.md  Dockerfile  LICENSE  README.md  action.yml  gh_config.toml  pyproject.toml
.github/workflows/: pip.yml  pixi.yml  release.yml
scripts/: test.py
src/raa/: defaults.py  main.py  raa.py
