[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "readme_and_act"
version = ["dynamic"]
description = ""
requires-python = ">=3.14"

[tool.setuptools.packages.find]
where = ["scripts"]  

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.tasks]
genstats = "python -c 'import scripts.parse as p; p.gen_stats()'"
