[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "raa"
dynamic = ["version"]
description = ""
requires-python = ">=3.14"
dependencies = [
    "requests",
    "pydantic",
    "pygithub"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ['raa']

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
raa = { path = ".", editable = true }

[tool.pixi.tasks]
test = "python scripts/test.py"