[build-system]
requires = ["setuptools >= 61.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "raa"
authors = [
  {name = "WardDeb", email = "w@rddeboutte.com"},
]
dynamic = ["version"]
description = ""
requires-python = ">=3.14"
dependencies = [
    "requests",
    "pydantic",
    "pygithub"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ['raa']

[project.scripts]
raa = "raa.main:main"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
raa = { path = ".", editable = true }

[tool.pixi.tasks]
test = "raa --username WardDeb --filename README.md --max_lines 5 --repo WardDeb/WardDeb --test"